--- a/index.html
+++ b/index.html
@@ -3,9 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Landing Page</title>
 </head>
 <body>
-    
+    <div class="top">
+
+    </div>
+    <div class="info">
+
+    </div>
+    <div class="quote">
+
+    </div>
+    <div class="sign-up">
+
+    </div>
+    <div class="footer">
+
+    </div>
 </body>
 </html>
