--- a/index.html
+++ b/index.html
@@ -7,13 +7,18 @@
     <title>Landing Page</title>
 </head>
 <body>
+    <div>
+    <div class="header">
+        <div class="logo">Header Logo</div>
+        <div>
+            <ul>
+                <li><a href="#">header link one</a></li>
+                <li><a href="#">header link two</a></li>
+                <li><a href="#">header link three</a></li>
+            </ul>
+        </div>
+    </div>
     <div class="top">
-        <ul>
-            <li><a href="#">Header Logo</a></li>
-            <li><a href="#">header link one</a></li>
-            <li><a href="#">header link two</a></li>
-            <li><a href="#">header link three</a></li>
-        </ul>
 
     </div>
     <div class="info">
