--- a/index.html
+++ b/index.html
@@ -7,28 +7,37 @@
     <title>Landing Page</title>
 </head>
 <body>
-    <div>
     <div class="header">
-        <div class="logo">Header Logo</div>
-        <div>
-            <ul>
-                <li><a href="#">header link one</a></li>
-                <li><a href="#">header link two</a></li>
-                <li><a href="#">header link three</a></li>
-            </ul>
+        <div class="container">
+            <div class="logo">Header Logo</div>
+            <div>
+                <ul>
+                    <li><a href="#">header link one</a></li>
+                    <li><a href="#">header link two</a></li>
+                    <li><a href="#">header link three</a></li>
+                </ul>
+            </div>
         </div>
     </div>
     <div class="top">
+        <div class="container">
 
+        </div>
     </div>
     <div class="info">
+        <div class="container">
 
+        </div>
     </div>
     <div class="quote">
+        <div class="container">
 
+        </div>
     </div>
     <div class="sign-up">
-
+        <div class="container">
+            
+        </div>
     </div>
     <div class="footer">
 
