--- a/index.html
+++ b/index.html
@@ -21,7 +21,14 @@
     </div>
     <div class="top">
         <div class="container">
-
+            <div class="left-hero">
+                <p class="hero-main">This website is temporary</p>
+                <p class="hero-sub">The website has some subtext that goes here under the main title. 
+                    It's a smaller font and the color is lower contrast.</p>
+            </div>
+            <div class="left-hero">
+                <div class="image">this is placeholder for an image</div>
+            </div>
         </div>
     </div>
     <div class="info">
@@ -36,7 +43,7 @@
     </div>
     <div class="sign-up">
         <div class="container">
-            
+
         </div>
     </div>
     <div class="footer">
