Add sign up button to hero

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                 <p class="hero-main">This website is temporary</p>
                 <p class="hero-sub">The website has some subtext that goes here under the main title. 
                     It's a smaller font and the color is lower contrast.</p>
+                <button>Sign up</button>
             </div>
             <div class="left-hero">
                 <div class="image">this is placeholder for an image</div>
